--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Interview App (Realtime)</title>
-    <meta name="theme-color" content="#0b1020" />
-    <link rel="icon" href="/logo.svg" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<!doctype html><html><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><title>Interview App (Realtime)</title><link rel='icon' href='/logo.svg'></head><body><div id='root'></div><script type='module' src='/src/main.jsx'></script></body></html>
