major next version UI and stuff

--- a/index.html
+++ b/index.html
@@ -2,37 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Dad's Interview Bot</title>
-    <meta name="theme-color" content="#0b1020" />
-    <link rel="icon" href="/logo.svg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dad’s Interview Bot</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  
-<div style="
-    background: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 12px;
-    padding: 16px;
-    margin: 20px auto;
-    max-width: 600px;
-    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-">
-  <ul style="list-style: none; padding: 0; margin: 0;">
-    <li>🎤 <b>Talk, don’t type</b> — Mic-first interviews with real-time AI voice.</li>
-    <li>⚡ <b>Instant responses</b> — Powered by OpenAI’s low-latency Realtime API (WebRTC).</li>
-    <li>📼 <b>Automatic recording</b> — Mixed audio (you + AI) saved securely.</li>
-    <li>📜 <b>History at your fingertips</b> — Browse past sessions in a public archive.</li>
-    <li>📧 <b>Optional email delivery</b> — Send conversations straight to your inbox.</li>
-    <li>🔒 <b>Reliable + private</b> — Strong server logging and timeouts keep sessions stable.</li>
-  </ul>
-</div>
-
-</body>
+  </body>
 </html>
